ITRUM test final

--- a/part 2/index.html
+++ b/part 2/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
-    <title>JS feor Kids</title>
+    <title>ITRUM test</title>
   </head>
   <body>
-    <span id="heading">Hello world!</span>
    <script src="jsReloader.js"/></script>
-   <script src="jsTasks.js"/></script>
+   <script src="jsApp.js"/></script>
+   <input id='input' type="text" placeholder="название задачи">
+   <button onclick="addTask()">создать</button>
   </body>
 </html>
